01_module/14_list.tf
resource "aws_lb_listener" "hlpark_lblist" {
  load_balancer_arn       = aws_lb.hlpark_lb.arn
  port                    = 80
  protocol                = "HTTP"

  default_action {
    type              = "forward"
    target_group_arn = aws_lb_target_group.hlpark_lbtg.arn
  }   
}
